yaml file refinement
